@@ -1,5 +1,5 @@
 /*
- * $Id: harbour.slx,v 1.62 2005/03/15 22:31:54 andijahja Exp $
+ * $Id: harbour.slx,v 1.64 2005/03/31 14:34:04 andijahja Exp $
  */
 
 /*
@@ -954,7 +954,6 @@ static int hb_comp_SLX_CustomAction( int x )
 {
    extern BOOL hb_pp_bInline;
    char *pTmp;
-   BOOL bInlineComment = FALSE;
 
    DEBUG_INFO( printf( "Custom Action for %i after: %i\n", x, iLastToken ) );
 
@@ -1345,7 +1344,6 @@ static int hb_comp_SLX_CustomAction( int x )
                      }
                      else if( *pBuffer == '/' && *(pBuffer+1) == '*' )
                      {
-                        bInlineComment = TRUE;
                         pBuffer++;
                         cMode = INLINE_COMMENT;
                      }
@@ -1376,7 +1374,6 @@ static int hb_comp_SLX_CustomAction( int x )
                   case INLINE_COMMENT :
                      if( *pBuffer == '*' && *(pBuffer+1) == '/' )
                      {
-                        bInlineComment = FALSE;
                         pBuffer++;
                         cMode = INLINE_NORMAL;
                      }
@@ -1385,12 +1382,6 @@ static int hb_comp_SLX_CustomAction( int x )
 
                pBuffer++;
             }
-
-          if( bInlineComment )
-	  {
-             hb_compGenError( hb_comp_szErrors, 'F', HB_COMP_ERR_UNTERMINATED_COMMENTS, NULL, NULL );
-	     break;
-	  }
 
           SaveInline :
 
